--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,18 @@
 *~
-*.c
+ChangeLog
+Makefile
+Makefile.in
+aclocal.m4
+autom4te.cache/
+config.guess
+config.log
+config.status
+config.sub
+configure
+depcomp
+install-sh
+libtool
+ltmain.sh
+m4/
+maja-0.1.pc
+missing
