Fix control flow for captured blocks

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -8,5 +8,9 @@ TESTS = \
 	blockcapture.js \
 	$(NULL)
 
-.vala.js:
+CLEANFILES = \
+	blockcapture.js \
+	$(NULL)
+
+.vala.js: $(top_builddir)/majac/majac
 	$(top_builddir)/majac/majac --vapidir $(top_srcdir)/dova-vapi --vapidir $(top_srcdir)/majac --pkg dova-base-0.1 --pkg dova-app-0.1 $<
