--- a/configure.ac
+++ b/configure.ac
@@ -36,6 +36,7 @@ VALA_REQUIRED=0.11.1
 
 # Checks for programs.
 AC_PROG_CC
+AM_PROG_CC_C_O
 AC_PROG_INSTALL
 AC_PROG_LIBTOOL
 AM_PROG_VALAC($VALA_REQUIRED)
