--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -14,4 +14,4 @@ CLEANFILES = \
 	$(NULL)
 
 .vala.js: $(top_builddir)/majac/majac
-	$(top_builddir)/majac/majac --vapidir $(top_srcdir)/dova-vapi --vapidir $(top_srcdir)/majac --pkg dova-base-0.1 --pkg dova-app-0.1 $<
+	$(top_builddir)/majac/majac --vapidir $(top_srcdir)/dova-vapi --vapidir $(top_srcdir)/vapi --pkg dova-base-0.1 --pkg dova-app-0.1 $<
