Rename SimpleField to Javascript simple_field. Add dovamodel.vala test.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -2,11 +2,15 @@ NULL =
 
 JSBIN = smjs
 
-TESTS_ENVIRONMENT = $(JSBIN) -f $(top_srcdir)/majac/maja-utils.js -f $(top_builddir)/majac/dova-base-0.1.js
+TESTS_ENVIRONMENT = $(JSBIN) \
+	-f $(top_srcdir)/majac/maja-utils.js \
+	-f $(top_builddir)/majac/dova-base-0.1.js \
+	-f $(top_builddir)/majac/dova-model-0.1.js
 
 TESTS = \
 	blockcapture.js \
 	capturedloop.js \
+	dovamodel.js \
 	$(NULL)
 
 CLEANFILES = \
@@ -14,4 +18,4 @@ CLEANFILES = \
 	$(NULL)
 
 %.js: %.vala $(top_builddir)/majac/majac
-	$(top_builddir)/majac/majac --vapidir $(top_srcdir)/dova-vapi --vapidir $(top_srcdir)/vapi --pkg dova-base-0.1 --pkg dova-app-0.1 $<
+	$(top_builddir)/majac/majac --vapidir $(top_srcdir)/dova-vapi --vapidir $(top_srcdir)/vapi --pkg dova-base-0.1 --pkg dova-app-0.1 --pkg dova-model-0.1 $<
