Support equals. Support iterators and foreach.

--- a/majac/Makefile.am
+++ b/majac/Makefile.am
@@ -32,7 +32,7 @@ majac_VALAFLAGS = \
 all-local: dova-base-0.1.js dova-model-0.1.js
 
 dova-base-0.1.js: dova-base-0.1.vala majac
-	$(builddir)/majac --nostdpkg $<
+	$(builddir)/majac --vapidir $(top_srcdir)/vapi --pkg js-lang --nostdpkg $<
 
 dova-model-0.1.js: dova-model-0.1.vala majac
 	$(builddir)/majac --vapidir $(top_srcdir)/dova-vapi --vapidir $(top_srcdir)/vapi --pkg dova-base-0.1 $<
