--- a/majac/Makefile.am
+++ b/majac/Makefile.am
@@ -35,4 +35,4 @@ dova-base-0.1.js: dova-base-0.1.vala majac
 	$(builddir)/majac --vapidir $(top_srcdir)/vapi --pkg js-lang --nostdpkg $<
 
 dova-model-0.1.js: dova-model-0.1.vala majac
-	$(builddir)/majac --vapidir $(top_srcdir)/dova-vapi --vapidir $(top_srcdir)/vapi --pkg dova-base-0.1 $<
+	$(builddir)/majac --vapidir $(top_srcdir)/dova-vapi --vapidir $(top_srcdir)/vapi --pkg js-lang --pkg dova-base-0.1 $<
