--- a/examples/qx/helloworld/Makefile.am
+++ b/examples/qx/helloworld/Makefile.am
@@ -1,10 +1,14 @@
 NULL = 
 
-SOURCES = \
+all-local: ValaApplication.js
+
+ValaApplication.js: $(srcdir)/main.vala $(top_builddir)/majac/majac
+	$(top_builddir)/majac/majac --vapidir $(top_srcdir)/dova-vapi --vapidir $(top_srcdir)/vapi --vapidir $(top_srcdir)/majac --pkg dova-base-0.1 --pkg qx -o ValaApplication $(srcdir)/main.vala
+
+EXTRA_DIST = \
 	main.vala \
 	$(NULL)
 
-all-local: ValaApplication.js
-
-ValaApplication.js: $(SOURCES) $(top_builddir)/majac/majac
-	$(top_builddir)/majac/majac --vapidir $(top_srcdir)/dova-vapi --vapidir $(top_srcdir)/vapi --vapidir $(top_srcdir)/majac --pkg dova-base-0.1 --pkg qx -o ValaApplication $(SOURCES)
+CLEANFILES = \
+	ValaApplication.js \
+	$(NULL)
